--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,12 @@
 [submodule "3rdparty/libssh2"]
 	path = 3rdparty/libssh2
 	url = https://github.com/libssh2/libssh2.git
+[submodule "3rdparty/asyncfuture"]
+	path = 3rdparty/asyncfuture
+	url = https://github.com/benlau/asyncfuture.git
+[submodule "3rdparty/easyloggingpp"]
+	path = 3rdparty/easyloggingpp
+	url = https://github.com/amrayn/easyloggingpp.git
+[submodule "3rdparty/qt-unix-signals"]
+	path = 3rdparty/qt-unix-signals
+	url = https://github.com/sijk/qt-unix-signals.git
